--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "mime": "^3.0.0",
     "pm2": "^4.5.6",
     "progress": "^2.0.3"
   }
