--- a/package.json
+++ b/package.json
@@ -1,10 +1,6 @@
 {
   "name": "joy_guan_npm_test",
-<<<<<<< HEAD
-  "version": "1.0.1",
-=======
   "version": "1.0.2",
->>>>>>> f1f78137f59fef9704d5ede8cebf157f849d7725
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -25,6 +21,7 @@
     "@ali/tps-node": "^3.0.0",
     "axios": "^0.21.1",
     "express": "^4.18.2",
+    "lib-login": "0.0.22",
     "mime": "^3.0.0",
     "multiparty": "^4.2.3",
     "mysql": "^2.18.1",
